Security/pod-with-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-pod
spec:
  containers:
  - image: shamimice03/kubectl-image    
    name: kubectl-pod
  serviceAccountName: pod-access
