Security/netpol-allow-egress-from-pod.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-webserver-3
  namespace: prod
spec:
  podSelector:
    matchLabels:
      role: webserver-1
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
            matchLabels:
              role: webserver-3
      ports:
        - protocol: TCP
          port: 80
---
