Security/netpol-allow-ingress-deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-deny-egress
  namespace: prod
spec:
  podSelector:
    matchLabels:
      role: webserver-1
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: webserver-2
      ports:
        - port: 80
  egress: []
---
