Security/netpol-allow-ingress-from-different-ns.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-from-different-ns
  namespace: prod
spec:
  podSelector:
    matchLabels:
      role: webserver-1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: testserver-1
      namespaceSelector:
        matchLabels:
          team: dev
    ports:
    - port: 80
---
