Security/netpol-default-deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: prod
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
---
